@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.2 2004/06/26 16:14:42 grant Exp $
+@comment $NetBSD: PLIST,v 1.3 2004/07/03 05:28:10 xtraeme Exp $
 lib/win32/3ivX.qtx
 lib/win32/BeHereiVideo.qtx
 lib/win32/CLRVIDDC.DLL
@@ -96,4 +96,6 @@ lib/win32/wmv8ds32.ax
 lib/win32/wmv9dmod.dll
 lib/win32/wmvdmod.dll
 lib/win32/wmvds32.ax
+lib/win32/wnvplay1.dll
+lib/win32/wnvwinx.dll
 @dirrm lib/win32
